# fastapi-react-todo

./: README.md
api/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
api/.devcontainer/: devcontainer.json
api/alembic/: env.py
api/alembic/versions/: 2e084b795fc9_make_content_not_nullable.py  2f6a337a00d2_add_user_id_to_statuses.py  3f6f79c0f782_create_statuses_table_and_add_status_id_.py  87d53b4d8980_add_user_model_and_task_user_id.py  9c44fba64e21_create_tasks_table.py
api/app/: auth.py  config.py  database.py  email.py  main.py
api/app/crud/: auth.py  status.py  task.py  user.py
api/app/models/: base.py  status.py  task.py  user.py
api/app/routers/: auth.py  status.py  task.py
api/app/schemas/: auth.py  common.py  status.py  task.py
api/docker-entrypoint-initdb.d/: create-test-db.sql
api/scripts/: seed.py
api/tests/: conftest.py  factories.py  test_auth.py  test_status.py  test_task.py  utils.py
docs/: PBI.md  api-design.md  architecture.md  auth-backlog.md  database-schema.md
web/: .gitignore  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.tsx
web/src/api/: client.ts  generated.ts  schemas.ts
web/src/components/: LinkWithFromState.tsx
web/src/lib/: auth.ts  config.ts  format.ts  navigation.ts  toast.ts  zod.ts
web/src/routes/: __root.tsx  _auth.tsx  _protected.tsx  index.tsx  reset-password.tsx  statuses.$statusId.edit.tsx  statuses.index.tsx  statuses.new.tsx  tasks.$taskId.edit.tsx  tasks.new.tsx
web/src/store/: auth.ts
web/src/types/: router.d.ts
(+18 files in other folders)
