[tool.poetry]
name = "task-app-api"
version = "0.1.0"
description = "Task management API built with FastAPI"
authors = ["Haruto Ikehara <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.2"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.46"
alembic = "^1.18.3"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
python-multipart = "^0.0.22"
email-validator = "^2.0"
pwdlib = {extras = ["bcrypt"], version = "^0.3.0"}
pyjwt = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
